--- a/sites/configurations/goodmoves/partials/shortlist-chip.hbs
+++ b/sites/configurations/goodmoves/partials/shortlist-chip.hbs
@@ -1,22 +1,16 @@
-{{#with (if (contains (map @root.data.shortlist_ids.items (getProp "id")) id) "on" else="off")}}
-  <div class="mdc-chip {{#compare this "on"}}mdc-chip--selected{{/compare}}" data-vacancy-id="{{../id}}" data-ajax-chip='{
-      "onUrl": "/add-to-shortlist?id={{../id}}",
-      "offUrl": "/remove-from-shortlist?id={{../id}}",
-      "onClasses": {
-        ".mdc-card[data-vacancy-id=\"{{../id}}\"]": "mdc-elevation--z15"
-      },
-      "offClasses": {
+{{#> ajax_chip 
+  onUrl=(concat "/add-to-shortlist?id=" id) 
+  offUrl=(concat "/remove-from-shortlist?id=" id) 
+  onText="Shortlisted"
+  offText="Add to shortlist"
+  iconClasses="far fa-star"
+  on=(contains (map @root.data.shortlist_ids.items (getProp "id")) id)
 
-      },
-      "onText": "Shortlisted",
-      "offText": "Add to shortlist"
-    }'>
-    <span class="far fa-star mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>
-    <div class="mdc-chip__checkmark">
-      <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-        <path class="mdc-chip__checkmark-path" fill="none" stroke="#244817" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-      </svg>
-    </div>
-    <div class="mdc-chip__text noselect">{{#compare this "on"}}Shortlisted{{else}}Add to shortlist{{/compare}}</div>
-  </div>
-{{/with}}
+}}
+{
+  "extraAttributes": "data-vacancy-id=\"{{../id}}\"",
+  "onClasses": {
+    ".mdc-card[data-vacancy-id=\"{{../id}}\"]": "mdc-elevation--z15"
+  }
+}
+{{/ajax_chip}}
