Moved Shortlist chip from key info to full view and made shortlist page work

--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -5,12 +5,9 @@
     Shortlist
   </h1>
 
-  <p class="mdc-typography--body1">
-    TBC
-  </p>
-  <!-- {{#each data.search_data.detailed_results.hits.hits ~}}
+  {{#each data.search_data.detailed_results.hits.hits ~}}
   {{> vacancy_search_result _source}}
-  {{/each ~}} -->
+  {{/each ~}}
 
   <div class="foot">
     {{> pagination paging=data.search_data.detailed_results.pagination}}
