--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -1,4 +1,7 @@
 <div class="mdc-card full" data-vacancy-id="{{Id}}">
+  <div class="mdc-card__action-icons mdc-chip-set">
+    {{> shortlist_chip id=Id}}
+  </div>
   {{> vacancy_key_info}}
   <hr class="mdc-list-divider" />
   <div class="vacancy-info-container">
