Made a Term Type Label lookup so Working Patterns can be handled like other terms in search form

--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -108,9 +108,9 @@
         </div>
       </div>
 
-      {{#each (split "roles,sectors" ",")}}
+      {{#each (split "roles,sectors,statuses" ",")}}
         <h3 class="mdc-drawer__content-heading">
-          {{capitalize this}}
+          {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
           <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{../instance_id}}-{{this}}-collapse"
                 role="button" aria-pressed="false"
                 aria-label="Show roles" tabindex="0">
@@ -123,20 +123,6 @@
           {{/each ~}}
         </div>
       {{/each}}
-
-      <h3 class="mdc-drawer__content-heading">
-        Working pattern
-        <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{instance_id}}-statuses-collapse"
-              role="button" aria-pressed="false"
-              aria-label="Show roles" tabindex="0">
-          <i class="far {{#if request.params.query.statuses}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
-        </span>
-      </h3>
-      <div id="{{instance_id}}-statuses-collapse"{{#unless request.params.query.statuses}} style="display: none;"{{/unless}}>
-        {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
-        {{> term_checkbox value=(lookup ../data.supplimentaryResponses.types.aggregations.statuses.buckets @index) slug=key field="statuses" selected=../request.params.query.statuses instance_id=../instance_id}}
-        {{/each ~}}
-      </div>
 
       <div class="h-margin v-margin">
         <button class="mdc-button mdc-button--raised mdc-button--large mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
