Re-added accidently removed code that handles collapsibles and made collapsible heading block the trigger in search form

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1875,6 +1875,9 @@ footer.mdc-layout__footer {
 .l-margin { margin-left: $unit/2; }
 .r-margin { margin-right: $unit/2; }
 
+.cursor-pointer { cursor: pointer; }
+.cursor-arrow { cursor: default; }
+
 .mdc-select--box {
   margin-top: 16px;
 }
