--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -37,7 +37,7 @@
     <form action="/{{#compare request.url.pathname "/map"}}map{{else}}search{{/compare}}" method="GET" class="search-form">
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
+          <span class="far fa-search mdc-text-field__icon" tabindex="-1"></span>
           <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.keywords}}" data-lpignore="true" autocomplete="off">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
             Keywords
@@ -88,8 +88,8 @@
 
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-arrow-alt-from-left mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.salary_min}}" data-lpignore="true">
+          <span class="far fa-arrow-alt-from-left mdc-text-field__icon" tabindex="-1"></span>
+          <input type="number" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.salary_min}}" data-lpignore="true">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">
             Minimum salary
           </label>
@@ -99,8 +99,8 @@
 
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-arrow-alt-to-right mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.salary_max}}" data-lpignore="true">
+          <span class="far fa-arrow-alt-to-right mdc-text-field__icon" tabindex="-1"></span>
+          <input type="number" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.salary_max}}" data-lpignore="true">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">
             Maximum salary
           </label>
