Broken latest MDC

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -989,6 +989,9 @@ hr {
     .mdc-card__action--shortlist .fa-heart {
       color: $mdc-theme-primary-dark;
     }
+    .mdc-chip .mdc-chip__checkmark-path {
+      stroke: $mdc-theme-primary-dark;
+    }
     .mdc-card__action--shortlist:hover .fa-heart {
       font-weight: 900;
     }
