--- a/sites/configurations/goodmoves/partials/ajax-chip.hbs
+++ b/sites/configurations/goodmoves/partials/ajax-chip.hbs
@@ -1,5 +1,5 @@
 {{#with (parse (@partial-block))}}
-  <div class="mdc-chip {{if ../on "mdc-chip--selected"}}" {{extraAttributes}} data-ajax-chip='{
+  <div class="mdc-chip {{if ../on "mdc-chip--selected"}}" {{{extraAttributes}}} data-ajax-chip='{
       "onUrl": "{{../onUrl}}",
       "offUrl": "{{../offUrl}}",
       "onMethod": "{{default ../onMethod "GET"}}",
@@ -19,7 +19,7 @@
       "onText": "{{../onText}}",
       "offText": "{{../offText}}"
     }'>
-    <span class="{{../iconClasses}} mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>
+    <span class="{{../iconClasses}} mdc-chip__icon mdc-chip__icon--leading {{if ../on "mdc-chip__icon--leading-hidden"}}" aria-hidden="true"></span>
     <div class="mdc-chip__checkmark">
       <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
         <path class="mdc-chip__checkmark-path" fill="none" stroke="#244817" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
