--- a/sites/configurations/goodmoves/templates/vacancies/map.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/map.hbs
@@ -9,7 +9,7 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content container-map">
-  <div id="map-full" data-map-options='{
+  <div id="map-full" data-map-name="fullMap" data-map-options='{
     "center": {
       "lat": 57.1795139,
       "lng": -5.5317967
@@ -125,17 +125,14 @@
       }
     ],
     "disableDefaultUI": true
-  }' data-map-pins='[
-    {{#each data.search_data.map_results.hits.hits}}
-      {{#if _source.geo_vacancy_coords}}
-        {{#each (arrayify _source.geo_vacancy_coords)}}
-          {
-            "coords": {{{stringify this}}},
-            "title": {{{stringify ../_source.title}}},
-            "info_window": {{{stringify (urlencode (getProperty (component "vacancy_map" ../_source) "string"))}}}
-          }{{#unless @../last}},{{/unless}}
-        {{/each}}
-      {{/if}}
-    {{/each}}
-  ]'></div>
+    }'></div>
 </div>
+{{#each data.search_data.map_results.hits.hits}}
+  {{#if _source.geo_vacancy_coords}}
+    {{#each (arrayify _source.geo_vacancy_coords)}}
+      <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-title="{{../_source.title}}">
+        {{>vacancy_map ../_source}}
+      </marker>
+    {{/each}}
+  {{/if}}
+{{/each}}
