--- a/sites/configurations/goodmoves/templates/account/login.hbs
+++ b/sites/configurations/goodmoves/templates/account/login.hbs
@@ -58,7 +58,11 @@
         goodmoves.app.auth().signInWithEmailAndPassword(email, password).then(function(user) {
           if (user) {
             console.log('Logged in:', user);
-            window.location.href = '/';
+            user.user.getIdTokenResult().then(function(idTokenResult) {
+              console.log('ID Token Result', idTokenResult);
+              goodmoves.setCookie('gm_token', idTokenResult.token, 7);
+              window.location.href = '/';
+            });
           } else {
             $message.text('Something went wrong, logged in but no user?').show();
             $loader.css('display', 'none');
