Fixed on and off classes for ajax chips

--- a/sites/configurations/goodmoves/partials/shortlist-chip.hbs
+++ b/sites/configurations/goodmoves/partials/shortlist-chip.hbs
@@ -10,6 +10,9 @@
   "extraAttributes": "data-vacancy-id=\"{{../id}}\"",
   "onClasses": {
     ".mdc-card[data-vacancy-id=\"{{../id}}\"]": "mdc-elevation--z15"
+    },
+  "offClasses": {
+    ".mdc-card[data-vacancy-id=\"{{../id}}\"]": "removed-from-shortlist"
   }
 }
 {{/ajax_chip}}
