--- a/sites/configurations/goodmoves/templates/account/logout.hbs
+++ b/sites/configurations/goodmoves/templates/account/logout.hbs
@@ -13,6 +13,7 @@
         goodmoves.app.auth().signOut().then(function() {
           window.location.href = '/';
           goodmoves.setCookie('gm_token');
+          goodmoves.setCookie('gm_cookie');
         }).catch(function(err) {
           console.error('Error logging out:', err);
         });
