Beginnings of register with socmed

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -369,12 +369,12 @@ footer h3,
   background-color: $mdc-theme-primary;
 }
 
-.login-form {
+.login-form, .register-form{
   margin: 10vh auto;
   .mdc-card {
     position: relative;
   }
-  #login-message {
+  #login-message, #register-message {
     display: none;
   }
 }
