--- a/sites/configurations/goodmoves/templates/account/register.hbs
+++ b/sites/configurations/goodmoves/templates/account/register.hbs
@@ -1,46 +1,95 @@
   <form id="register-form" method="POST" class="register-form">
     <div class="mdc-card">
       <div class="mdc-card__info--vacancy">
-        <div class="mdc-card__info--vacancy-title mdc-typography--headline4">
+        <div class="mdc-card__info--vacancy-title mdc-typography--headline4 x-padding">
           Register
         </div>
       </div>
       <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="register-message">
           <span id="form-message"></span>
       </div>
-      <div class="mdc-typography--body1" id="form-section-email">
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="register-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="register-email">
-            Email
-          </label>
-          <div class="mdc-line-ripple"></div>
-        </div>
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="register-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="register-email-confirm">
-            Confirm Email
-          </label>
-          <div class="mdc-line-ripple"></div>
-        </div>
+      <div class="mdc-card__info x-padding-full">
+        <div class="mdc-typography--body1" id="form-section-email">
+          <div class="mdc-typography--headline5">
+            How would you like to register? 
+          </div>
+         
+          <div class="mdc-form-field">
+            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
+              <input class="mdc-radio__native-control" type="radio" id="registration-method-email" name="registration-method" value="email" checked>
+              <div class="mdc-radio__background">
+                <div class="mdc-radio__outer-circle"></div>
+                <div class="mdc-radio__inner-circle"></div>
+              </div>
+            </div>
+            <label for="registration-method-email">Email</label>
+          </div>
+          <div class="mdc-form-field">
+            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
+              <input class="mdc-radio__native-control" type="radio" id="registration-method-google" name="registration-method" value="google">
+              <div class="mdc-radio__background">
+                <div class="mdc-radio__outer-circle"></div>
+                <div class="mdc-radio__inner-circle"></div>
+              </div>
+            </div>
+            <label for="registration-method-google">Google</label>
+          </div>
+          <div class="mdc-form-field">
+            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
+              <input class="mdc-radio__native-control" type="radio" id="registration-method-twitter" name="registration-method" value="twitter">
+              <div class="mdc-radio__background">
+                <div class="mdc-radio__outer-circle"></div>
+                <div class="mdc-radio__inner-circle"></div>
+              </div>
+            </div>
+            <label for="registration-method-twitter">Twitter</label>
+          </div>
+          <div class="mdc-form-field">
+            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
+              <input class="mdc-radio__native-control" type="radio" id="registration-method-facebook" name="registration-method" value="facebook">
+              <div class="mdc-radio__background">
+                <div class="mdc-radio__outer-circle"></div>
+                <div class="mdc-radio__inner-circle"></div>
+              </div>
+            </div>
+            <label for="registration-method-facebook">Facebook</label>
+          </div>
 
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="register-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="register-password">
-            Password
-          </label>
-          <div class="mdc-line-ripple"></div>
-        </div>
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="register-password-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="register-password-confirm">
-            Confirm Password
-          </label>
-          <div class="mdc-line-ripple"></div>
+          <div id="email-password-form">
+            <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+              <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+              <input type="text" id="register-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+              <label class="mdc-floating-label mdc-floating-label--float-above" for="register-email">
+                Email
+              </label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+            <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+              <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+              <input type="text" id="register-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+              <label class="mdc-floating-label mdc-floating-label--float-above" for="register-email-confirm">
+                Confirm Email
+              </label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+
+            <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+              <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+              <input type="password" id="register-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+              <label class="mdc-floating-label mdc-floating-label--float-above" for="register-password">
+                Password
+              </label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+            <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+              <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+              <input type="password" id="register-password-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+              <label class="mdc-floating-label mdc-floating-label--float-above" for="register-password-confirm">
+                Confirm Password
+              </label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="mdc-card__actions" id="form-section-register-buttons">
@@ -59,6 +108,18 @@
   </form>
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
+      var registrationMethod = 'email';
+      $('[name="registration-method"]').on('change', function(evt) {
+        registrationMethod = evt.currentTarget.value;
+        console.log('REGISTRATION METHOD CHANGE:', registrationMethod);
+
+        if (registrationMethod === 'email') {
+          $('#email-password-form').show();
+        } else {
+          $('#email-password-form').hide();
+        }
+      });
+
       var $form = $('#register-form');
       var $message = $('#register-message');
       var $email = $('#register-email');
