--- a/sites/configurations/scvo/templates/pages/page-home.hbs
+++ b/sites/configurations/scvo/templates/pages/page-home.hbs
@@ -68,7 +68,7 @@
 
 <section class="featured-content">
 
-  <div class="featured-background-image charity-awards" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA-2018-SCVOWEB-MAIN-1400x400.jpg');">
+  <!-- <div class="featured-background-image charity-awards" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA-2018-SCVOWEB-MAIN-1400x400.jpg');">
     <div class="container-fluid">
       <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
@@ -93,7 +93,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="featured-background-image i-love-charity">
     <div class="container-fluid">
