Fixed broken shortlist chips

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -852,6 +852,7 @@ img.responsive {
 .mdc-typography--title,
 .mdc-card__title--large,
 .mdc-typography--caption,
+.mdc-menu .mdc-list-item,
 .mdc-typography--headline,
 .supplimentary-list-title,
 .mdc-card__supporting-text,
