--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -310,15 +310,7 @@
         <a href="/organisation/{{organisation.slug}}" class="mdc-card__action">Find out more about {{organisation.name}}</a>
       </div>
       <div class="mdc-card__action-icons mdc-chip-set pull-right">
-        <div class="mdc-chip" onclick="goodmoves.toggleShortlistItem('{{Id}}');" data-mdc-auto-init="MDCChip">
-          <span class="far fa-star mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>
-          <div class="mdc-chip__checkmark">
-            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-              <path class="mdc-chip__checkmark-path" fill="none" stroke="#244817" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-            </svg>
-          </div>
-          <div class="mdc-chip__text noselect">Shortlist</div>
-        </div>
+        {{> shortlist_chip id=Id}}
       </div>
     </div>
   </div>
