--- a/sites/configurations/goodmoves/templates/account/register.hbs
+++ b/sites/configurations/goodmoves/templates/account/register.hbs
@@ -10,85 +10,56 @@
       </div>
       <div class="mdc-card__info x-padding-full">
         <div class="mdc-typography--body1" id="form-section-email">
-          <div class="mdc-typography--headline5">
-            How would you like to register? 
+          <div class="middle-line-text">
+            <span>Continue with</span>
           </div>
-         
-          <div class="mdc-form-field">
-            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
-              <input class="mdc-radio__native-control" type="radio" id="registration-method-email" name="registration-method" value="email" checked>
-              <div class="mdc-radio__background">
-                <div class="mdc-radio__outer-circle"></div>
-                <div class="mdc-radio__inner-circle"></div>
-              </div>
-            </div>
-            <label for="registration-method-email">Email</label>
-          </div>
-          <div class="mdc-form-field">
-            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
-              <input class="mdc-radio__native-control" type="radio" id="registration-method-google" name="registration-method" value="google">
-              <div class="mdc-radio__background">
-                <div class="mdc-radio__outer-circle"></div>
-                <div class="mdc-radio__inner-circle"></div>
-              </div>
-            </div>
-            <label for="registration-method-google">Google</label>
-          </div>
-          <div class="mdc-form-field">
-            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
-              <input class="mdc-radio__native-control" type="radio" id="registration-method-twitter" name="registration-method" value="twitter">
-              <div class="mdc-radio__background">
-                <div class="mdc-radio__outer-circle"></div>
-                <div class="mdc-radio__inner-circle"></div>
-              </div>
-            </div>
-            <label for="registration-method-twitter">Twitter</label>
-          </div>
-          <div class="mdc-form-field">
-            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
-              <input class="mdc-radio__native-control" type="radio" id="registration-method-facebook" name="registration-method" value="facebook">
-              <div class="mdc-radio__background">
-                <div class="mdc-radio__outer-circle"></div>
-                <div class="mdc-radio__inner-circle"></div>
-              </div>
-            </div>
-            <label for="registration-method-facebook">Facebook</label>
+          <div class="button-row">
+            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-google" type="button">
+              <span class="fa fa-google"></span> Google
+            </button>
+            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-twitter" type="button">
+              <span class="fa fa-twitter"></span> Twitter
+            </button>
+            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-facebook" type="button">
+              <span class="fa fa-facebook"></span> Facebook
+            </button>
           </div>
 
-          <div id="email-password-form">
-            <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-              <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-              <input type="text" id="register-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-              <label class="mdc-floating-label mdc-floating-label--float-above" for="register-email">
-                Email
-              </label>
-              <div class="mdc-line-ripple"></div>
-            </div>
-            <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-              <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-              <input type="text" id="register-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-              <label class="mdc-floating-label mdc-floating-label--float-above" for="register-email-confirm">
-                Confirm Email
-              </label>
-              <div class="mdc-line-ripple"></div>
-            </div>
+          <div class="middle-line-text">
+            <span>Or register with an email address</span>
+          </div>
+          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+            <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+            <input type="text" id="register-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+            <label class="mdc-floating-label mdc-floating-label--float-above" for="register-email">
+              Email
+            </label>
+            <div class="mdc-line-ripple"></div>
+          </div>
+          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+            <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+            <input type="text" id="register-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+            <label class="mdc-floating-label mdc-floating-label--float-above" for="register-email-confirm">
+              Confirm Email
+            </label>
+            <div class="mdc-line-ripple"></div>
+          </div>
 
-            <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-              <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-              <input type="password" id="register-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-              <label class="mdc-floating-label mdc-floating-label--float-above" for="register-password">
-                Password
-              </label>
-              <div class="mdc-line-ripple"></div>
-            </div>
-            <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-              <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-              <input type="password" id="register-password-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
-              <label class="mdc-floating-label mdc-floating-label--float-above" for="register-password-confirm">
-                Confirm Password
-              </label>
-              <div class="mdc-line-ripple"></div>
-            </div>
+          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+            <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+            <input type="password" id="register-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+            <label class="mdc-floating-label mdc-floating-label--float-above" for="register-password">
+              Password
+            </label>
+            <div class="mdc-line-ripple"></div>
+          </div>
+          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+            <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+            <input type="password" id="register-password-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
+            <label class="mdc-floating-label mdc-floating-label--float-above" for="register-password-confirm">
+              Confirm Password
+            </label>
+            <div class="mdc-line-ripple"></div>
           </div>
         </div>
       </div>
@@ -117,76 +88,67 @@
       var $passwordConfirm = $('#register-password-confirm');
       var $register = $('#register-submit');
       var $loader = $('#register-loader');
-
-      var registrationMethod = 'email';
-      $('[name="registration-method"]').on('change', function(evt) {
-        registrationMethod = evt.currentTarget.value;
-        console.log('REGISTRATION METHOD CHANGE:', registrationMethod);
-
-        if (registrationMethod === 'email') {
-          $emailForm.show();
-        } else {
-          $emailForm.hide();
-        }
-      });
+      var $google = $('#continue-with-google');
+      var $twitter = $('#continue-with-twitter');
+      var $facebook = $('#continue-with-facebook');
       
       $form.on('submit', function(evt) {
         $loader.css('display', 'flex');
         evt.preventDefault();
 
-        if (registrationMethod === 'email') {
-          var email = $email.val();
-          var emailConfirm = $emailConfirm.val();
-          var password = $password.val();
-          var passwordConfirm = $passwordConfirm.val();
+        var email = $email.val();
+        var emailConfirm = $emailConfirm.val();
+        var password = $password.val();
+        var passwordConfirm = $passwordConfirm.val();
 
-          if (email !== emailConfirm) {
-            $message.text('The two email addresses entered do not match').show();
-            return;
-          }
-
-          if (password !== passwordConfirm) {
-            $message.text('The two passwords entered do not match').show();
-            return;
-          }
-
-          goodmoves.app.auth().createUserWithEmailAndPassword(email, password).then(function(user) {
-            if (user) {
-              console.log('Registered user:', user);
-              user.user.getIdTokenResult().then(function(idTokenResult) {
-                console.log('ID Token Result', idTokenResult);
-                goodmoves.setCookie('gm_token', idTokenResult.token, 7);
-                window.location.href = '/';
-              });
-            } else {
-              $message.text('Something went wrong, registerd but no user?').show();
-              $loader.css('display', 'none');
-            }
-          }).catch(function(err) {
-            $message.text(err.message).show();
-            $loader.css('display', 'none');
-          });
-        } else {
-          var provider = new firebase.auth.GoogleAuthProvider();
-          provider.addScope('email');
-          goodmoves.app.auth().signInWithPopup(provider).then(function(result) {
-            if (result) {
-              console.log('Registered user:', result);
-              result.user.getIdTokenResult().then(function(idTokenResult) {
-                console.log('ID Token Result', idTokenResult);
-                goodmoves.setCookie('gm_token', idTokenResult.token, 7);
-                window.location.href = '/';
-              });
-            } else {
-              $message.text('Something went wrong, registerd but no user?').show();
-              $loader.css('display', 'none');
-            }
-          }).catch(function(err) {
-            console.error('GOOGLE ERROR:', err);
-            $message.text(err.message).show();
-            $loader.css('display', 'none');
-          });
+        if (email !== emailConfirm) {
+          $message.text('The two email addresses entered do not match').show();
+          return;
         }
+
+        if (password !== passwordConfirm) {
+          $message.text('The two passwords entered do not match').show();
+          return;
+        }
+
+        goodmoves.app.auth().createUserWithEmailAndPassword(email, password).then(function(user) {
+          if (user) {
+            console.log('Registered user:', user);
+            user.user.getIdTokenResult().then(function(idTokenResult) {
+              console.log('ID Token Result', idTokenResult);
+              goodmoves.setCookie('gm_token', idTokenResult.token, 7);
+              window.location.href = '/';
+            });
+          } else {
+            $message.text('Something went wrong, registerd but no user?').show();
+            $loader.css('display', 'none');
+          }
+        }).catch(function(err) {
+          $message.text(err.message).show();
+          $loader.css('display', 'none');
+        });
+      });
+
+      $google.on('click', function(evt) {
+        var provider = new firebase.auth.GoogleAuthProvider();
+        provider.addScope('email');
+        goodmoves.app.auth().signInWithPopup(provider).then(function(result) {
+          if (result) {
+            console.log('Registered user:', result);
+            result.user.getIdTokenResult().then(function(idTokenResult) {
+              console.log('ID Token Result', idTokenResult);
+              goodmoves.setCookie('gm_token', idTokenResult.token, 7);
+              window.location.href = '/';
+            });
+          } else {
+            $message.text('Something went wrong, registerd but no user?').show();
+            $loader.css('display', 'none');
+          }
+        }).catch(function(err) {
+          console.error('GOOGLE ERROR:', err);
+          $message.text(err.message).show();
+          $loader.css('display', 'none');
+        });
       });
     });
   </script>
