--- a/sites/configurations/goodmoves/templates/account/login.hbs
+++ b/sites/configurations/goodmoves/templates/account/login.hbs
@@ -9,6 +9,24 @@
           <span id="form-message"></span>
       </div>
       <div class="mdc-typography--body1" id="form-section-email">
+          <div class="middle-line-text">
+            <span>Continue with</span>
+          </div>
+          <div class="button-row">
+            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-google" type="button">
+              <span class="fa fa-google"></span> Google
+            </button>
+            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-twitter" type="button">
+              <span class="fa fa-twitter"></span> Twitter
+            </button>
+            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-facebook" type="button">
+              <span class="fa fa-facebook"></span> Facebook
+            </button>
+          </div>
+
+          <div class="middle-line-text">
+            <span>Or login with an email and password</span>
+          </div>
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
           <input type="text" id="login-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off">
@@ -49,6 +67,9 @@
       var $password = $('#login-password');
       var $login = $('#login-submit');
       var $loader = $('#login-loader');
+      var $google = $('#continue-with-google');
+      var $twitter = $('#continue-with-twitter');
+      var $facebook = $('#continue-with-facebook');
 
       $form.on('submit', function(evt) {
         var email = $email.val();
@@ -68,6 +89,28 @@
             $loader.css('display', 'none');
           }
         }).catch(function(err) {
+          $message.text(err.message).show();
+          $loader.css('display', 'none');
+        });
+      });
+      
+      $google.on('click', function(evt) {
+        var provider = new firebase.auth.GoogleAuthProvider();
+        provider.addScope('email');
+        goodmoves.app.auth().signInWithPopup(provider).then(function(result) {
+          if (result) {
+            console.log('Registered user:', result);
+            result.user.getIdTokenResult().then(function(idTokenResult) {
+              console.log('ID Token Result', idTokenResult);
+              goodmoves.setCookie('gm_token', idTokenResult.token, 7);
+              window.location.href = '/';
+            });
+          } else {
+            $message.text('Something went wrong, registerd but no user?').show();
+            $loader.css('display', 'none');
+          }
+        }).catch(function(err) {
+          console.error('GOOGLE ERROR:', err);
           $message.text(err.message).show();
           $loader.css('display', 'none');
         });
